--- a/app/src/main/res/layout/activity_pocket_employment_splash_screen.xml
+++ b/app/src/main/res/layout/activity_pocket_employment_splash_screen.xml
@@ -12,19 +12,19 @@
     <!--android:background="@drawable/job_market_pic"-->
 
     <!--android:textColor="#fffffc"-->
-
+    <!--android:src="@drawable/job_market_pic"-->
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
         android:padding="3dp"
-        android:src="@drawable/job_market_pic"
+
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"/>
-
+    <!--style="@style/CustomFont"-->
     <TextView
         android:id="@+id/titleSplashScreen"
         android:layout_width="wrap_content"
@@ -32,8 +32,8 @@
         android:text="@string/title_splash_screen"
         android:gravity="center"
         android:textAlignment="center"
-        style="@style/CustomFont"
-        android:textSize="@dimen/abc_text_size_title_material"
+
+        android:textSize="12sp"
         tools:ignore="MissingPrefix"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"/>
