--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,25 @@
     <color name="colorAccent">#FF4081</color>
     <color name="background_material_light_1">#a19393</color>
     <color name="background_material_light_2">#c8a9a9</color>
-    <color name="foreground_material_light">#b06f6f</color>
-    <color name="primary_material_light">#b41a1a</color>
-    <color name="text_color_primary">#dd1d0d0d</color>
+    <color name="foreground_material_light_3">#b06f6f</color>
+    <color name="primary_material_light_1">#b41a1a</color>
+    <color name="text_color_primary">#1d9c56</color>
     <color name="colorBackground">#61acb0</color>
+    <color name="hint_color">#80f5f0f0</color>
+    <color name="light_grey">#cccccc</color>
+
+    <color name="blue" type="color">#FF33B5E5</color>
+    <color name="green" type="color">#FF99CC00</color>
+    <color name="darkpurple" type="color">#FF9933CC</color>
+    <color name="darkgreen" type="color">#FF669900</color>
+    <color name="darkred" type="color">#FFCC0000</color>
+    <color name="indigo" type="color">#3F5185</color>
+    <color name="custom_color_1">#19B6BC</color>
+    <color name="custom_color_2">#BC1919</color>
+    <color name="primary_material_dark">#b81e1e</color>
+    <color name="primary_dark_material_dark">#3795b7</color>
+    <color name="accent_material_dark">#ccd6d5</color>
+    <color name="background_material_dark_1">#60285d</color>
+    <color name="foreground_material_dark_1">#1d9c56</color>
+    <color name="primary_text_material_light">#deab2c2c</color>
 </resources>
